working version with lots of debug in output

--- a/CUDA/Makefile
+++ b/CUDA/Makefile
@@ -1,3 +1,4 @@
+# use "c:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars64.bat"
 ARCH?=native
 NVFLAGS=-std=c++14 -arch=$(ARCH) -O3 --expt-relaxed-constexpr --default-stream legacy 
 
